Correction overflow filmFocused

--- a/public/assets/css/filmFocused.css
+++ b/public/assets/css/filmFocused.css
@@ -271,7 +271,7 @@ body {
 	overflow: hidden;
 	margin: 0px;
 	position: relative;
-	width: 95vw;
+	width: 94vw;
 
 }
   
